# modee

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.xml
doc/: manifest.yaml
doc/html/: Dynamixel2Arduino_8cpp.html  Dynamixel2Arduino_8cpp__incl.map  Dynamixel2Arduino_8cpp__incl.md5  Dynamixel2Arduino_8cpp_source.html  Dynamixel2Arduino_8h.html  Dynamixel2Arduino_8h__dep__incl.map  Dynamixel2Arduino_8h__dep__incl.md5  Dynamixel2Arduino_8h__incl.map  Dynamixel2Arduino_8h__incl.md5  Dynamixel2Arduino_8h_source.html  actuator_8cpp.html  actuator_8cpp__incl.map  annotated.html  (+283 more)
modee_arduino/: modular_endeffector_20220127.ino
src/: [backup]ocr_create_data.py  modee_node.py  ocr.py  ocr_create_data.py  ocr_training.py
test/: current_based_position_test_10_20220325.bag  current_based_position_test_10_20220327.bag  current_based_position_test_1_20220325.bag  current_based_position_test_2_20220325.bag  current_based_position_test_3_20220325.bag  current_based_position_test_4_20220325.bag  current_based_position_test_5_20220325.bag  current_based_position_test_6_20220325.bag  current_based_position_test_7_20220325.bag  current_based_position_test_8_20220325.bag  current_based_position_test_9_20220325.bag  current_based_position_test_step_100_period_1_20220327.bag  current_based_position_test_step_100_period_3_20220327.bag  current_based_position_test_step_100_period_3_20220327.orig.bag  current_based_position_test_step_10_period_2_20220327.bag  current_based_position_test_with_rotation_step_100_period_3_20220327.bag  feedback_process_test_01_20220328.bag
(+12 files in other folders)
